fix overflow headers
bigger size for menu navPanel buttons

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -124,7 +124,7 @@ input, select, textarea {
 		@media screen and (max-width: 1680px) {
 
 			html {
-				font-size: 12pt;
+				font-size: 13pt;
 			}
 
 		}
@@ -132,7 +132,7 @@ input, select, textarea {
 		@media screen and (max-width: 1280px) {
 
 			html {
-				font-size: 11pt;
+				font-size: 12pt;
 			}
 
 		}
@@ -3650,8 +3650,8 @@ input, select, textarea {
 		overflow: hidden;
 		padding: 0 2rem 0 0;
 		position: relative;
-		width: calc(100% - var(--widthSubtraction));
-		max-width: 72rem;
+		width: calc(100% - 4rem);
+		max-width: 50em;
 		z-index: 2;
 	}
 
@@ -3787,13 +3787,13 @@ input, select, textarea {
 		background-color: #ffffff;
 		position: relative;
 		margin: 0 auto;
-		width: calc(100% - var(--widthSubtraction));
-		max-width: 72rem;
+		width: calc(100% - 4rem);
+		max-width: 50em;
 		z-index: 2;
 	}
 
 		#main > * {
-			padding: 4rem 4rem 4rem 4rem ;
+			padding: 2rem 2rem 2rem 2rem ;
 			border-top: solid 2px #eeeeee;
 			margin: 0;
 		}
@@ -3807,7 +3807,7 @@ input, select, textarea {
 		}
 
 		#main > .post {
-			padding: 8rem 8rem 1rem 8rem ;
+			padding: 4rem 4rem 4rem 4rem ;
 		}
 
 			#main > .post header.major > .date {
@@ -3832,7 +3832,7 @@ input, select, textarea {
 			@media screen and (max-width: 1280px) {
 
 				#main > .post {
-					padding: 6rem 4rem 4rem 4rem ;
+					padding: 3rem 3rem 3rem 3rem ;
 				}
 
 			}
@@ -3840,7 +3840,7 @@ input, select, textarea {
 			@media screen and (max-width: 736px) {
 
 				#main > .post {
-					padding: 4rem 2rem 2rem 2rem ;
+					padding: 2rem 2rem 2rem 2rem ;
 				}
 
 					#main > .post header.major > .date {
@@ -3890,7 +3890,7 @@ input, select, textarea {
 			}
 
 			#main > .posts > * {
-				padding: 4rem;
+				padding: 2rem;
 				width: 50%;
 			}
 
@@ -3900,6 +3900,7 @@ input, select, textarea {
 				border-style: solid;
 				border-top-width: 2px;
 				text-align: center;
+				font-size: 0.9rem;
 			}
 
 				#main > .posts > article > :last-child {
@@ -3991,8 +3992,8 @@ input, select, textarea {
 		cursor: default;
 		position: relative;
 		margin: 0 auto;
-		width: calc(100% - var(--widthSubtraction));
-		max-width: 72rem;
+		width: calc(100% - 4rem);
+		max-width: 50em;
 		z-index: 2;
 	}
 
@@ -4428,8 +4429,8 @@ input, select, textarea {
 		text-align: center;
 		text-transform: uppercase;
 		margin: 4rem auto 8rem auto;
-		width: calc(100% - var(--widthSubtraction));
-		max-width: 72rem;
+		width: calc(100% - 4rem);
+		max-width: 50em;
 		z-index: 2;
 	}
 
@@ -4526,12 +4527,12 @@ input, select, textarea {
 		transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 		display: none;
 		position: fixed;
-		top: 0.75rem;
-		right: 0.75rem;
+		top: 1.25rem;
+		right: 1.25rem;
 		border: 0;
 		color: #ffffff;
 		font-family: "Source Sans Pro", Helvetica, sans-serif;
-		font-size: 0.9rem;
+		font-size: 2rem;
 		font-weight: 900;
 		letter-spacing: 0.075em;
 		padding: 0.375rem 1.25rem;
@@ -4578,7 +4579,7 @@ input, select, textarea {
 		@media screen and (max-width: 736px) {
 
 			#navPanelToggle {
-				font-size: 0.8rem;
+				font-size: 1.8rem;
 				padding: 0.25rem 1rem;
 			}
 
@@ -4609,30 +4610,34 @@ input, select, textarea {
 		width: 20rem;
 		z-index: 10002;
 	}
+	
+		#navPanel .icon:before {
+			font-size: 2rem;
+		}
 
 		#navPanel .links {
 			list-style: none;
 			padding-left: 0;
+			padding-top: 5rem;
 		}
 
 			#navPanel .links li {
-				border-top: solid 2px #eeeeee;
+				border: solid 2px #eeeeee;
 			}
 
 				#navPanel .links li a {
 					border-bottom: 0;
 					display: block;
 					font-family: "Source Sans Pro", Helvetica, sans-serif;
-					font-size: 0.9rem;
-					font-size: 0.9rem;
+					font-size: 1rem;
 					font-weight: 900;
 					letter-spacing: 0.075em;
-					padding: 0.75rem 0;
+					padding: 2rem 0;
 					text-transform: uppercase;
 				}
 
 				#navPanel .links li:first-child {
-					border-top: 0;
+					border-bottom: 0;
 				}
 
 		#navPanel .close {
@@ -4646,15 +4651,15 @@ input, select, textarea {
 			color: #909498;
 			cursor: pointer;
 			display: block;
-			height: 3.25rem;
-			line-height: 3.25rem;
-			padding-right: 1.25rem;
+			height: 4.25rem;
+			line-height: 4.25rem;
+			padding-right: 1.5rem;
 			position: absolute;
-			right: 0;
+			right: 1rem;
 			text-align: right;
-			top: 0;
+			top: 2rem;
 			vertical-align: middle;
-			width: 7rem;
+			width: 10rem;
 		}
 
 			#navPanel .close:before {
@@ -4672,7 +4677,7 @@ input, select, textarea {
 
 			#navPanel .close:before {
 				content: '\f00d';
-				font-size: 1.25rem;
+				font-size: 3.25rem;
 			}
 
 			#navPanel .close:hover {
